--- a/frontend/src/app/landing/page.css
+++ b/frontend/src/app/landing/page.css
@@ -1,6 +1,7 @@
 .videoUpload__upload {
     width: 30vw;
     /* height: 7vw; */
+    line-height: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,4 +49,13 @@
   .videoUpload__or h3 {
     margin: 0 1vw;
   }
-  
+  .right-arrow-container{
+    width: 40px;
+    height: 30px;
+    background-color:white;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 25vw;
+  }
