--- a/frontend/src/app/report/page.css
+++ b/frontend/src/app/report/page.css
@@ -1,4 +1,4 @@
-label{
+/* label{
     font-size: 20px;
     font-weight: 400;
 } 
@@ -17,4 +17,124 @@ input{
 
 button {
 	max-width: 300px;
-}
+} */
+/* ReportPage.css */
+
+/* General styles */
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	/* margin-top: 5px; */
+  }
+  
+  /* Button styles */
+  .complaint-button {
+	padding: 15px;
+	border-radius: 15px;
+	font-size: 18px;
+	font-weight: 550;
+	background-color: #333;
+	color: white;
+	border: #ffffff80;
+  }
+  
+  /* Form container styles */
+  .form-container {
+	width: 50%;
+	height: 490px;
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: column;
+	align-self: center;
+	/* margin-top: 30px; */
+	border-radius: 30px;
+	background-color: white;
+	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Form input styles */
+  .form-input-container {
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: column;
+  }
+  
+  .form-input-left {
+	margin-top: 25px;
+	line-height: 2;
+	display: flex;
+	flex-direction: column;
+  }
+  
+  .form-input-left label {
+	font-weight: 500;
+  }
+  
+  .form-input-left select,
+  .form-input-left input[type="date"],
+  .form-input-left input[type="file"],
+  .form-input-left input[type="text"] {
+	width: 300px;
+	padding: 8px;
+	border-radius: 10px;
+	font-size: 18px;
+  }
+  
+  .form-input-right {
+	margin-left: 50px;
+	margin-top: 25px;
+	line-height: 1.5;
+	display: flex;
+	flex-direction: column;
+  }
+  
+  .form-input-right label {
+	margin-top: 10px;
+	font-weight: 500;
+  }
+  
+  .form-input-right input[type="text"] {
+	width: 300px;
+	padding: 8px;
+	border-radius: 10px;
+	border-width: 0.3px;
+  }
+  
+  .form-input-right textarea {
+	width: 300px;
+	padding: 8px;
+	border-radius: 10px;
+	border-width: 0.3px;
+  }
+  
+  /* Voice Report section styles */
+  .voice-report-section {
+	justify-content: center;
+	display: flex;
+	/* margin-bottom: 40px; */
+  }
+  
+  /* Voice Recorder styles */
+  .voice-recorder {
+	margin-left: 5px;
+  }
+  /* Save button styles */
+  .save-button {
+	align-self: center;
+	margin-top: 20px;
+	padding: 15px;
+	width: 180px;
+	background-color: #0045f5;
+	color: white;
+	border-width: 0;
+	border-radius: 40px;
+	font-weight: 550;
+	font-size: 18px;
+  }
+  .stop-recording-button{
+	background-color: #333;
+	color:white;
+	font-weight: 580;
+	border-radius:20px;
+  }
